# polyclaw

./: .env.example  .gitignore  .hadolint.yaml  .ironclaw-main-commit  .ironclaw-tagged-commit  .openclaw-main-commit  .openclaw-tagged-commit  .openclaw-version  .picoclaw-main-commit  .picoclaw-tagged-commit  .pre-commit-config.yaml  .zeroclaw-main-commit  AGENTS.md  CODEOWNERS  Dockerfile  Dockerfile-ironclaw  Dockerfile-openclaw  Dockerfile-picoclaw  Dockerfile-zeroclaw  MEMORY.md  Makefile  QUICKSTART.md  README.md  SECURITY.md  SETUP.md  docker-compose.test.yml  docker-compose.yml  nginx.conf  pyproject.toml
.github/: dependabot.yml
.github/workflows/: auto-update.yml  codeql.yml  docker-build.yml  manual-release.yml  pre-commit.yml  smoke-test.yml
admin/: README.md  api_server.py  index.html
config/: openclaw.service  supervisord.conf
lib/: __init__.py  activity.js  activity.py  upstream.py
scripts/: configure-ironclaw.js  configure-openclaw.js  configure-picoclaw.js  configure-zeroclaw.js  configure.js  entrypoint.sh  openclaw-container.service  openclaw-wrapper.sh  run-as-openclaw.sh  smoke-test.sh
tests/: __init__.py
tests/integration/: test_dockerfile.py  test_github_api.py
tests/unit/: test_upstream.py
